--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 	},
 	"jest": {
 		"modulePathIgnorePatterns": [
-			"lib/.*"
+			"lib/.*", "generators/.*"
 		],
 		"testPathIgnorePatterns": [
 			"/node_modules/",
