--- a/packages/generator-liferay-bundle/package.json
+++ b/packages/generator-liferay-bundle/package.json
@@ -18,7 +18,8 @@
 		"babel-cli": "^6.26.0",
 		"babel-plugin-add-module-exports": "^0.2.1",
 		"babel-preset-env": "^1.7.0",
-		"ncp": "^2.0.0"
+		"ncp": "^2.0.0",
+		"rimraf": "^2.6.2"
 	},
 	"dependencies": {
 		"read-json-sync": "^2.0.0",
