Fixes #191 - Refactor scripts into an npm package

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
 	},
 	"jest": {
 		"modulePathIgnorePatterns": [
-			"lib/.*", "generators/.*"
+			"lib/.*",
+			"generators/.*"
 		],
 		"testPathIgnorePatterns": [
 			"/node_modules/",
