--- a/packages/generator-liferay-bundle/src/facet-project/templates/package.json
+++ b/packages/generator-liferay-bundle/src/facet-project/templates/package.json
@@ -1,17 +1,17 @@
 {
-	"name": "<%= name %>",
-	"version": "1.0.0",
-	"description": "<%= description %>",
-	"devDependencies": {
-		"liferay-npm-bundler": "^2.0.0",
-		"ncp": "^2.0.0"
-	},
-	"dependencies": {},
-	"scripts": {
-		"build": "npm run copy-assets && liferay-npm-bundler",
-		"copy-assets": "node ./scripts/copy-assets"
-	},
-	"osgi": {
-		"Web-ContextPath": "/<%= name %>"
-	}
+  "name": "<%= name %>",
+  "version": "1.0.0",
+  "description": "<%= description %>",
+  "devDependencies": {
+    "liferay-npm-bundler": "^2.0.0",
+    "liferay-npm-build-support": "^2.0.0"
+  },
+  "dependencies": {},
+  "scripts": {
+    "build": "npm run copy-assets && liferay-npm-bundler",
+    "copy-assets": "lnbs-copy-assets"
+  },
+  "osgi": {
+    "Web-ContextPath": "/<%= name %>"
+  }
 }
