--- a/packages/liferay-npm-bundler/src/__tests__/__fixtures__/config/create-jar/.npmbundlerrc
+++ b/packages/liferay-npm-bundler/src/__tests__/__fixtures__/config/create-jar/.npmbundlerrc
@@ -1,6 +1,7 @@
 {
 	"create-jar": {
 		"auto-deploy-portlet": false,
-		"web-context-path": "/perico"
+		"web-context-path": "/perico",
+		"output-dir": "dist"
 	}
 }
