Fixes #205 - Make test values look more professional

--- a/packages/liferay-npm-bundler/src/__tests__/__fixtures__/config/create-jar/.npmbundlerrc
+++ b/packages/liferay-npm-bundler/src/__tests__/__fixtures__/config/create-jar/.npmbundlerrc
@@ -1,7 +1,7 @@
 {
 	"create-jar": {
 		"auto-deploy-portlet": false,
-		"web-context-path": "/perico",
+		"web-context-path": "/my-portlet",
 		"output-dir": "dist"
 	}
 }
