--- a/packages/liferay-npm-bundler-plugin-replace-browser-modules/package.json
+++ b/packages/liferay-npm-bundler-plugin-replace-browser-modules/package.json
@@ -13,6 +13,7 @@
 		"recursive-copy": "^2.0.9"
 	},
 	"dependencies": {
+		"fs-extra": "^7.0.1",
 		"liferay-npm-build-tools-common": "2.5.0"
 	}
 }
